source/blender/editors/space_file/fsmenu.h
@@ -68,7 +68,7 @@ void fsmenu_free(void);
 void fsmenu_refresh_system_category(struct FSMenu *fsmenu);
 
 /** Refresh 'valid' status of all menu entries */
-void fsmenu_refresh_bookmarks_status(struct FSMenu *fsmenu);
+void fsmenu_refresh_bookmarks_status(struct wmWindowManager *wm, struct FSMenu *fsmenu);
 
 /** Get active index based on given directory. */
 int fsmenu_get_active_indices(struct FSMenu *fsmenu,
