source/blender/windowmanager/WM_api.h
@@ -661,6 +661,7 @@ enum {
   WM_JOB_TYPE_SHADER_COMPILATION,
   WM_JOB_TYPE_STUDIOLIGHT,
   WM_JOB_TYPE_LIGHT_BAKE,
+  WM_JOB_TYPE_FSMENU_BOOKMARK_VALIDATE,
   /* add as needed, screencast, seq proxy build
    * if having hard coded values is a problem */
 };
